[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Enemies/COLESLIME/cole_slime.png" type="Texture" id=1]
[ext_resource path="res://COLESLIME.gd" type="Script" id=2]
[ext_resource path="res://Assets/Enemies/COLESLIME/cole_slime_squash.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 84, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "crawl",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "squash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4, 3.75 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 3, 1.25 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 5, 3 )

[node name="COLESLIME" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 51
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "crawl"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.75 )
shape = SubResource( 12 )

[node name="floorchecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 2

[node name="TOP_CHECKER" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TOP_CHECKER"]
position = Vector2( 0, -3.75 )
shape = SubResource( 13 )

[node name="SIDE_CHECKER" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SIDE_CHECKER"]
position = Vector2( 0, 2 )
shape = SubResource( 14 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="TOP_CHECKER" to="." method="_on_TOP_CHECKER_body_entered"]
[connection signal="body_entered" from="SIDE_CHECKER" to="." method="_on_SIDE_CHECKER_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
